@@ -30,6 +30,8 @@ Version 1.7.1
        files pegs to HEAD. (Stefan)
 - BUG: Issue #105: Win7 library loses
        command buttons. (Stefan)
+- BUG: Issue #106: "Search for:" string is
+       trimmed forcibly in TortoiseMerge. (Stefan)
 
 Version 1.7.0
 Too many changes to list here. See the release notes for
